# efiks-os

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  flake.nix
.cargo/: config.toml
efiks-lib/rust/: Cargo.toml
efiks-lib/rust/src/: lib.rs  syscalls.rs
efiks-lib/zig/: build.zig  build.zig.zon
efiks-lib/zig/src/: brk_allocator.zig  root.zig
kernel/: Cargo.toml  build.rs  package.nix
kernel/src/: console.rs  debug.rs  errno.rs  error.rs  helper.rs  linker.ld  main.rs  percpu.rs  syscall.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv/: boot.rs  context.rs  mod.rs  syscall.rs
kernel/src/arch/riscv/trap/: trap.S  trap.rs  trap_frame.rs  trap_handler.rs
kernel/src/driver/virtio/: block.rs
kernel/src/exec/: elf.rs
kernel/src/mm/: addr.rs  address.rs  frame_allocator.rs  kernel_allocator.rs  kvm.rs  mappings.rs  mod.rs
kernel/src/mm/addr/: kernel_ptr.rs  kernel_virt_addr.rs  phys_addr.rs  user_buf.rs  user_ptr.rs  virt_addr.rs
kernel/src/sched/: mod.rs  sched.rs  sleeping_tasks.rs
kernel/src/task/: address_space.rs  file_table.rs  id.rs  mod.rs  state.rs  table.rs  task.rs  wait.rs
kernel/src/userspace/: syscalls.rs
kernel/src/vfs/: mod.rs
kmalloc/: Cargo.toml
kmalloc/src/: lib.rs  linked_list_allocator.rs
ksync/: Cargo.toml
ksync/src/: rw_lock.rs
tools/gdb/: walk_sv39.py
types/: Cargo.toml
types/src/: lib.rs
userspace/zig/shell/: build.zig  build.zig.zon
userspace/zig/shell/src/: main.zig
vfs/: Cargo.toml
vfs/src/: lib.rs
vsfs/: Cargo.toml
vsfs/src/: lib.rs
(+4 files in other folders)
